--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">ClevertecFinal</string>
+    <string name="logo_image">Logo Image</string>
+    <string name="text_field">Текстовое поле</string>
+    <string name="submit_form">Submit form</string>
+    <string name="choose_one_item">choose one item</string>
 </resources>
